--- a/index.html
+++ b/index.html
@@ -172,17 +172,63 @@ cursor:pointer;
 
 <!-- INFO PAGE -->
 <div id="infoPage" class="page">
-<div style="padding:40px;">
-<h3>PET</h3>
-<p>ขวดน้ำดื่ม รีไซเคิลง่าย</p>
+<div style="padding:30px 40px;">
 
-<h3>HDPE</h3>
-<p>ขวดแชมพู แข็งแรง ทนทาน</p>
+<h2 style="margin-top:0;">ข้อมูลประเภทพลาสติก</h2>
+<p style="color:#666;font-size:14px;">
+เรียนรู้ประเภทของพลาสติกที่ระบบสามารถตรวจจับได้ และแนวทางการแยกทิ้งอย่างถูกต้อง
+</p>
 
-<h3>Other</h3>
-<p>พลาสติกประเภทอื่น รีไซเคิลยาก</p>
+<hr style="margin:20px 0;">
+
+<!-- PET -->
+<div style="margin-bottom:25px;">
+<h3 style="color:#10b981;">PET (1)</h3>
+<p><b>ชื่อเต็ม:</b> Polyethylene Terephthalate</p>
+<p><b>พบใน:</b> ขวดน้ำดื่ม ขวดน้ำอัดลม ขวดชา กาแฟ</p>
+<p><b>คุณสมบัติ:</b> ใส แข็งแรง น้ำหนักเบา</p>
+<p><b>การรีไซเคิล:</b> ✔ รีไซเคิลง่าย</p>
+<p><b>คำแนะนำ:</b> ล้างให้สะอาด บีบให้แบนก่อนทิ้ง</p>
+</div>
+
+<hr>
+
+<!-- HDPE -->
+<div style="margin:25px 0;">
+<h3 style="color:#2563eb;">HDPE (2)</h3>
+<p><b>ชื่อเต็ม:</b> High-Density Polyethylene</p>
+<p><b>พบใน:</b> ขวดแชมพู ขวดน้ำยาซักผ้า แกลลอน ถังน้ำ</p>
+<p><b>คุณสมบัติ:</b> ทึบ แข็งแรง ทนสารเคมี</p>
+<p><b>การรีไซเคิล:</b> ✔ รีไซเคิลได้ดี</p>
+<p><b>คำแนะนำ:</b> เทของเหลวออกให้หมดก่อนทิ้ง</p>
+</div>
+
+<hr>
+
+<!-- OTHER -->
+<div style="margin:25px 0;">
+<h3 style="color:#ef4444;">Other (อื่น ๆ)</h3>
+<p><b>รวมถึง:</b> PC, ABS, Nylon และพลาสติกผสมหลายชนิด</p>
+<p><b>พบใน:</b> กล่องอาหารบางชนิด อุปกรณ์อิเล็กทรอนิกส์ พลาสติกแข็งพิเศษ</p>
+<p><b>การรีไซเคิล:</b> ❌ รีไซเคิลยาก หรือบางพื้นที่ไม่รับ</p>
+<p><b>คำแนะนำ:</b> ควรแยกทิ้งตามคำแนะนำของเทศบาล</p>
+</div>
+
+<hr>
+
+<h3>เคล็ดลับการรีไซเคิลที่ดี</h3>
+
+<ul style="font-size:14px; color:#444; line-height:1.6;">
+<li>✔ ล้างภาชนะก่อนทิ้ง</li>
+<li>✔ แยกประเภทตามรหัสรีไซเคิล</li>
+<li>✔ บีบขวดเพื่อลดพื้นที่</li>
+<li>❌ อย่าทิ้งปนกับขยะเปียก</li>
+<li>❌ อย่าเผาพลาสติก</li>
+</ul>
+
 </div>
 </div>
+
 
 <script>
 
@@ -323,4 +369,5 @@ if(loopId) cancelAnimationFrame(loopId);
 
 </body>
 </html>
+
 
