--- a/index.html
+++ b/index.html
@@ -12,126 +12,24 @@
 <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
 
 <style>
-body{
-margin:0;
-font-family:'Kanit',sans-serif;
-background:#eef2f6;
-height:100vh;
-display:flex;
-flex-direction:column;
-}
-
-/* HEADER */
-.header{
-padding:15px 25px;
-background:white;
-box-shadow:0 2px 6px rgba(0,0,0,0.05);
-}
+body{margin:0;font-family:'Kanit',sans-serif;background:#eef2f6;height:100vh;display:flex;flex-direction:column;}
+.header{padding:15px 25px;background:white;box-shadow:0 2px 6px rgba(0,0,0,0.05);}
 .header h2{margin:0;font-weight:600;}
 .header span{font-size:13px;color:#888;}
-
-/* TABS */
-.tabs{
-display:flex;
-justify-content:center;
-margin:15px;
-}
-.tab{
-padding:10px 25px;
-border-radius:25px;
-background:#e5e7eb;
-margin:0 5px;
-cursor:pointer;
-}
-.tab.active{
-background:linear-gradient(90deg,#10b981,#2563eb);
-color:white;
-}
-
-/* PAGE */
+.tabs{display:flex;justify-content:center;margin:15px;}
+.tab{padding:10px 25px;border-radius:25px;background:#e5e7eb;margin:0 5px;cursor:pointer;}
+.tab.active{background:linear-gradient(90deg,#10b981,#2563eb);color:white;}
 .page{display:none;flex:1;}
-
-/* CAMERA PAGE */
-.camera-card{
-margin:0 40px;
-background:#0f1c2e;
-border-radius:20px;
-flex:1;
-display:flex;
-align-items:center;
-justify-content:center;
-position:relative;
-overflow:hidden;
-}
-canvas{
-width:100%;
-height:100%;
-object-fit:cover;
-}
-
-.placeholder{
-color:#94a3b8;
-text-align:center;
-}
-
-.switch-btn{
-position:absolute;
-top:15px;
-right:15px;
-background:rgba(255,255,255,0.2);
-border:none;
-border-radius:50%;
-width:40px;
-height:40px;
-color:white;
-cursor:pointer;
-display:none;
-}
-
-.result-panel{
-background:white;
-padding:20px 30px;
-border-radius:20px 20px 0 0;
-}
-
-.result-row{
-margin-bottom:12px;
-}
-
-.progress-track{
-height:18px;
-background:#eee;
-border-radius:8px;
-overflow:hidden;
-position:relative;
-}
-
-.progress-fill{
-height:100%;
-width:0%;
-background:linear-gradient(90deg,#10b981,#3b82f6);
-transition:0.2s;
-}
-
-.percent-text{
-position:absolute;
-right:8px;
-top:50%;
-transform:translateY(-50%);
-font-size:12px;
-}
-
-.bottom-btn{
-margin:15px 40px 25px;
-padding:14px;
-border:none;
-border-radius:30px;
-background:linear-gradient(90deg,#10b981,#2563eb);
-color:white;
-font-size:16px;
-cursor:pointer;
-}
-
+.camera-card{margin:0 40px;background:#0f1c2e;border-radius:20px;flex:1;display:flex;align-items:center;justify-content:center;position:relative;overflow:hidden;}
+canvas{width:100%;height:100%;object-fit:cover;}
+.placeholder{color:#94a3b8;text-align:center;}
+.switch-btn{position:absolute;top:15px;right:15px;background:rgba(255,255,255,0.2);border:none;border-radius:50%;width:40px;height:40px;color:white;cursor:pointer;display:none;}
+.result-panel{background:white;padding:20px 30px;border-radius:20px 20px 0 0;}
+.result-row{margin-bottom:12px;}
+.progress-track{height:18px;background:#eee;border-radius:8px;overflow:hidden;position:relative;}
+.progress-fill{height:100%;width:0%;background:linear-gradient(90deg,#10b981,#3b82f6);transition:0.2s;}
+.percent-text{position:absolute;right:8px;top:50%;transform:translateY(-50%);font-size:12px;}
+.bottom-btn{margin:15px 40px 25px;padding:14px;border:none;border-radius:30px;background:linear-gradient(90deg,#10b981,#2563eb);color:white;font-size:16px;cursor:pointer;}
 </style>
 </head>
 
@@ -147,10 +45,9 @@ cursor:pointer;
 <div class="tab" onclick="showInfo()">ℹ️ ข้อมูลพลาสติก</div>
 </div>
 
-<!-- CAMERA PAGE -->
 <div id="cameraPage" class="page" style="display:flex;flex-direction:column;">
-
 <div class="camera-card">
+
 <div class="placeholder" id="placeholder">
 <span class="material-icons" style="font-size:60px;">no_photography</span>
 <p>กล้องยังไม่เปิด</p>
@@ -161,7 +58,6 @@ cursor:pointer;
 </button>
 
 <div id="webcam-container"></div>
-
 </div>
 
 <div class="result-panel" id="result-panel"></div>
@@ -169,162 +65,70 @@ cursor:pointer;
 <button class="bottom-btn" onclick="toggleCamera()">เปิด / ปิด กล้อง</button>
 </div>
 
-
-<!-- INFO PAGE -->
 <div id="infoPage" class="page">
 <div style="padding:30px 40px;">
-
-<h2 style="margin-top:0;">ข้อมูลประเภทพลาสติก</h2>
-<p style="color:#666;font-size:14px;">
-เรียนรู้ประเภทของพลาสติกที่ระบบสามารถตรวจจับได้ และแนวทางการแยกทิ้งอย่างถูกต้อง
-</p>
-
-<hr style="margin:20px 0;">
-
-<!-- PET -->
-<div style="margin-bottom:25px;">
-<h3 style="color:#10b981;">PET (1)</h3>
-<p><b>ชื่อเต็ม:</b> Polyethylene Terephthalate</p>
-<p><b>พบใน:</b> ขวดน้ำดื่ม ขวดน้ำอัดลม ขวดชา กาแฟ</p>
-<p><b>คุณสมบัติ:</b> ใส แข็งแรง น้ำหนักเบา</p>
-<p><b>การรีไซเคิล:</b> ✔ รีไซเคิลง่าย</p>
-<p><b>คำแนะนำ:</b> ล้างให้สะอาด บีบให้แบนก่อนทิ้ง</p>
-</div>
-
-<hr>
-
-<!-- HDPE -->
-<div style="margin:25px 0;">
-<h3 style="color:#2563eb;">HDPE (2)</h3>
-<p><b>ชื่อเต็ม:</b> High-Density Polyethylene</p>
-<p><b>พบใน:</b> ขวดแชมพู ขวดน้ำยาซักผ้า แกลลอน ถังน้ำ</p>
-<p><b>คุณสมบัติ:</b> ทึบ แข็งแรง ทนสารเคมี</p>
-<p><b>การรีไซเคิล:</b> ✔ รีไซเคิลได้ดี</p>
-<p><b>คำแนะนำ:</b> เทของเหลวออกให้หมดก่อนทิ้ง</p>
-</div>
-
-<hr>
-
-<!-- OTHER -->
-<div style="margin:25px 0;">
-<h3 style="color:#ef4444;">Other (อื่น ๆ)</h3>
-<p><b>รวมถึง:</b> PC, ABS, Nylon และพลาสติกผสมหลายชนิด</p>
-<p><b>พบใน:</b> กล่องอาหารบางชนิด อุปกรณ์อิเล็กทรอนิกส์ พลาสติกแข็งพิเศษ</p>
-<p><b>การรีไซเคิล:</b> ❌ รีไซเคิลยาก หรือบางพื้นที่ไม่รับ</p>
-<p><b>คำแนะนำ:</b> ควรแยกทิ้งตามคำแนะนำของเทศบาล</p>
-</div>
-
-<hr>
-
-<h3>เคล็ดลับการรีไซเคิลที่ดี</h3>
-
-<ul style="font-size:14px; color:#444; line-height:1.6;">
-<li>✔ ล้างภาชนะก่อนทิ้ง</li>
-<li>✔ แยกประเภทตามรหัสรีไซเคิล</li>
-<li>✔ บีบขวดเพื่อลดพื้นที่</li>
-<li>❌ อย่าทิ้งปนกับขยะเปียก</li>
-<li>❌ อย่าเผาพลาสติก</li>
-</ul>
-
+<h2>ข้อมูลประเภทพลาสติก</h2>
+<p style="color:#666;font-size:14px;">เรียนรู้ประเภทของพลาสติกและแนวทางแยกทิ้ง</p>
 </div>
 </div>
-
 
 <script>
-
 const URL="https://teachablemachine.withgoogle.com/models/EV-mbCqpx/";
 
-let model, webcam, maxPredictions;
+let model, webcam, loopId;
 let isCameraOn=false;
 let currentFacingMode="environment";
-let loopId=null;
 
 /* โหลดโมเดล */
 async function loadModel(){
 model=await tmImage.load(URL+"model.json",URL+"metadata.json");
-maxPredictions=model.getTotalClasses();
 createBars();
 }
 loadModel();
 
-/* สร้าง progress bars ตาม label จริง */
+/* สร้างแถบ */
 function createBars(){
 const panel=document.getElementById("result-panel");
 panel.innerHTML="";
-
 model.getClassLabels().forEach(label=>{
-const safeId=label.replace(/\s+/g,'');
+const id=label.replace(/\s+/g,'');
 panel.innerHTML+=`
 <div class="result-row">
 <div>${label}</div>
 <div class="progress-track">
-<span class="percent-text" id="text-${safeId}">0%</span>
-<div class="progress-fill" id="bar-${safeId}"></div>
+<span class="percent-text" id="text-${id}">0%</span>
+<div class="progress-fill" id="bar-${id}"></div>
 </div>
-</div>
-`;
+</div>`;
 });
 }
 
-/* Tabs */
-function showCamera(){
-document.getElementById("cameraPage").style.display="flex";
-document.getElementById("infoPage").style.display="none";
-setActiveTab(0);
-}
-
-function showInfo(){
-document.getElementById("cameraPage").style.display="none";
-document.getElementById("infoPage").style.display="block";
-setActiveTab(1);
-
-if(isCameraOn){
-stopCamera();
-}
-}
-
-function setActiveTab(index){
-document.querySelectorAll(".tab").forEach(t=>t.classList.remove("active"));
-document.querySelectorAll(".tab")[index].classList.add("active");
-}
-
-/* กล้อง */
+/* เปิด/ปิด */
 async function toggleCamera(){
 if(isCameraOn){
-stopCamera();
+await stopCamera();
 }else{
-initWebcam();
+await startCamera();
+}
 }
 
-
-async function initWebcam(){
-
-const flip = currentFacingMode === "user"; // ถ้าเป็นกล้องหน้า ให้ flip
-
-webcam = new tmImage.Webcam(400, 400, flip);
-
-await webcam.setup({ facingMode: currentFacingMode });
+async function startCamera(){
+const flip=currentFacingMode==="user";
+webcam=new tmImage.Webcam(400,400,flip);
+await webcam.setup({facingMode:currentFacingMode});
 await webcam.play();
 
 document.getElementById("placeholder").style.display="none";
 document.getElementById("switchBtn").style.display="block";
+document.getElementById("webcam-container").innerHTML="";
 document.getElementById("webcam-container").appendChild(webcam.canvas);
 
 isCameraOn=true;
-loopId=requestAnimationFrame(loop);
-}
-
-
-document.getElementById("placeholder").style.display="none";
-document.getElementById("switchBtn").style.display="block";
-document.getElementById("webcam-container").appendChild(webcam.canvas);
-
-isCameraOn=true;
-loopId=requestAnimationFrame(loop);
+loop();
 }
 
 async function stopCamera(){
-await stopLoop();
+if(loopId) cancelAnimationFrame(loopId);
 if(webcam) await webcam.stop();
 document.getElementById("webcam-container").innerHTML="";
 document.getElementById("placeholder").style.display="block";
@@ -333,25 +137,33 @@ resetBars();
 isCameraOn=false;
 }
 
+/* 🔥 สลับกล้องแบบไม่ดับ */
 async function switchCamera(){
 currentFacingMode=currentFacingMode==="environment"?"user":"environment";
-if(isCameraOn){
-await stopCamera();
-initWebcam();
-}
+
+if(!isCameraOn) return;
+
+await webcam.stop();
+
+const flip=currentFacingMode==="user";
+webcam=new tmImage.Webcam(400,400,flip);
+await webcam.setup({facingMode:currentFacingMode});
+await webcam.play();
+
+document.getElementById("webcam-container").innerHTML="";
+document.getElementById("webcam-container").appendChild(webcam.canvas);
 }
 
+/* Loop */
 async function loop(){
-if(webcam&&isCameraOn){
+if(!isCameraOn) return;
 webcam.update();
 await predict();
 loopId=requestAnimationFrame(loop);
 }
-}
 
 async function predict(){
 const prediction=await model.predict(webcam.canvas);
-
 prediction.forEach(p=>{
 const percent=Math.round(p.probability*100);
 updateBar(p.className,percent);
@@ -359,14 +171,9 @@ updateBar(p.className,percent);
 }
 
 function updateBar(label,percent){
-const safeId=label.replace(/\s+/g,'');
-const bar=document.getElementById("bar-"+safeId);
-const text=document.getElementById("text-"+safeId);
-
-if(bar){
-bar.style.width=percent+"%";
-text.innerText=percent+"%";
-}
+const id=label.replace(/\s+/g,'');
+document.getElementById("bar-"+id).style.width=percent+"%";
+document.getElementById("text-"+id).innerText=percent+"%";
 }
 
 function resetBars(){
@@ -374,15 +181,16 @@ document.querySelectorAll(".progress-fill").forEach(e=>e.style.width="0%");
 document.querySelectorAll(".percent-text").forEach(e=>e.innerText="0%");
 }
 
-async function stopLoop(){
-if(loopId) cancelAnimationFrame(loopId);
+function showCamera(){
+document.getElementById("cameraPage").style.display="flex";
+document.getElementById("infoPage").style.display="none";
 }
 
+function showInfo(){
+document.getElementById("cameraPage").style.display="none";
+document.getElementById("infoPage").style.display="block";
+}
 </script>
 
 </body>
 </html>
-
-
-
-
