--- a/index.html
+++ b/index.html
@@ -12,25 +12,150 @@
 <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
 
 <style>
-body{margin:0;font-family:'Kanit',sans-serif;background:#eef2f6;height:100vh;display:flex;flex-direction:column;}
-.header{padding:15px 25px;background:white;box-shadow:0 2px 6px rgba(0,0,0,0.05);}
+body{
+margin:0;
+font-family:'Kanit',sans-serif;
+background:#eef2f6;
+height:100vh;
+display:flex;
+flex-direction:column;
+}
+
+.header{
+padding:15px 25px;
+background:white;
+box-shadow:0 2px 6px rgba(0,0,0,0.05);
+}
+
 .header h2{margin:0;font-weight:600;}
 .header span{font-size:13px;color:#888;}
-.tabs{display:flex;justify-content:center;margin:15px;}
-.tab{padding:10px 25px;border-radius:25px;background:#e5e7eb;margin:0 5px;cursor:pointer;}
-.tab.active{background:linear-gradient(90deg,#10b981,#2563eb);color:white;}
+
+.tabs{
+display:flex;
+justify-content:center;
+margin:15px;
+}
+
+.tab{
+padding:10px 25px;
+border-radius:25px;
+background:#e5e7eb;
+margin:0 5px;
+cursor:pointer;
+}
+
+.tab.active{
+background:linear-gradient(90deg,#10b981,#2563eb);
+color:white;
+}
+
 .page{display:none;flex:1;}
-.camera-card{margin:0 40px;background:#0f1c2e;border-radius:20px;flex:1;display:flex;align-items:center;justify-content:center;position:relative;overflow:hidden;}
-canvas{width:100%;height:100%;object-fit:cover;}
-.placeholder{color:#94a3b8;text-align:center;}
-.switch-btn{position:absolute;top:15px;right:15px;background:rgba(255,255,255,0.2);border:none;border-radius:50%;width:40px;height:40px;color:white;cursor:pointer;display:none;}
-.result-panel{background:white;padding:20px 30px;border-radius:20px 20px 0 0;}
+
+.camera-card{
+margin:0 40px;
+background:#0f1c2e;
+border-radius:20px;
+flex:1;
+display:flex;
+align-items:center;
+justify-content:center;
+position:relative;
+overflow:hidden;
+}
+
+canvas{
+width:100%;
+height:100%;
+object-fit:cover;
+}
+
+.placeholder{
+color:#94a3b8;
+text-align:center;
+}
+
+.switch-btn{
+position:absolute;
+top:15px;
+right:15px;
+background:rgba(255,255,255,0.2);
+border:none;
+border-radius:50%;
+width:40px;
+height:40px;
+color:white;
+cursor:pointer;
+display:none;
+}
+
+.result-panel{
+background:white;
+padding:20px 30px;
+border-radius:20px 20px 0 0;
+}
+
 .result-row{margin-bottom:12px;}
-.progress-track{height:18px;background:#eee;border-radius:8px;overflow:hidden;position:relative;}
-.progress-fill{height:100%;width:0%;background:linear-gradient(90deg,#10b981,#3b82f6);transition:0.2s;}
-.percent-text{position:absolute;right:8px;top:50%;transform:translateY(-50%);font-size:12px;}
-.bottom-btn{margin:15px 40px 25px;padding:14px;border:none;border-radius:30px;background:linear-gradient(90deg,#10b981,#2563eb);color:white;font-size:16px;cursor:pointer;}
-.scan-frame{position:absolute;width:65%;height:55%;border:2px solid rgba(255,255,255,0.7);border-radius:20px;pointer-events:none;}
+
+.progress-track{
+height:18px;
+background:#eee;
+border-radius:8px;
+overflow:hidden;
+position:relative;
+}
+
+.progress-fill{
+height:100%;
+width:0%;
+background:linear-gradient(90deg,#10b981,#3b82f6);
+transition:0.2s;
+}
+
+.percent-text{
+position:absolute;
+right:8px;
+top:50%;
+transform:translateY(-50%);
+font-size:12px;
+}
+
+.bottom-btn{
+margin:15px 40px 25px;
+padding:14px;
+border:none;
+border-radius:30px;
+background:linear-gradient(90deg,#10b981,#2563eb);
+color:white;
+font-size:16px;
+cursor:pointer;
+}
+
+/* INFO DROPDOWN */
+
+.dropdown{
+background:white;
+border-radius:15px;
+margin-bottom:12px;
+box-shadow:0 2px 8px rgba(0,0,0,0.05);
+overflow:hidden;
+}
+
+.dropdown-header{
+padding:15px 20px;
+cursor:pointer;
+display:flex;
+justify-content:space-between;
+font-weight:500;
+}
+
+.dropdown-body{
+max-height:0;
+overflow:hidden;
+padding:0 20px;
+font-size:14px;
+color:#555;
+transition:max-height 0.4s ease,padding 0.3s ease;
+}
 </style>
 </head>
 
@@ -46,6 +171,7 @@ canvas{width:100%;height:100%;object-fit:cover;}
 <div class="tab" onclick="showInfo()">ℹ️ ข้อมูลพลาสติก</div>
 </div>
 
+<!-- CAMERA PAGE -->
 <div id="cameraPage" class="page" style="display:flex;flex-direction:column;">
 <div class="camera-card">
 
@@ -59,7 +185,6 @@ canvas{width:100%;height:100%;object-fit:cover;}
 </button>
 
 <div id="webcam-container"></div>
-<div class="scan-frame"></div>
 
 </div>
 
@@ -69,111 +194,45 @@ canvas{width:100%;height:100%;object-fit:cover;}
 
 <!-- INFO PAGE -->
 <div id="infoPage" class="page">
-<div style="padding:40px;">
+<div style="padding:30px;max-width:700px;margin:auto;">
 
-<!-- Hero Card -->
-<div style="
-background:linear-gradient(90deg,#10b981,#2563eb);
-color:white;
-padding:25px;
-border-radius:20px;
-margin-bottom:30px;
-box-shadow:0 4px 15px rgba(0,0,0,0.1);
-">
-<h2 style="margin:0 0 10px 0;">รู้จักประเภทพลาสติก</h2>
-<p style="margin:0;font-size:14px;">
-เรียนรู้การแยกขยะให้ถูกต้อง ช่วยลดโลกร้อน และเพิ่มประสิทธิภาพการรีไซเคิล
-</p>
-</div>
+<h2 style="margin-bottom:20px;">ข้อมูลพลาสติก</h2>
 
-<!-- Stats Section -->
-<div style="
-display:grid;
-grid-template-columns:repeat(auto-fit,minmax(150px,1fr));
-gap:15px;
-margin-bottom:30px;
-">
-
-<div style="background:white;padding:20px;border-radius:15px;text-align:center;">
-<h3 style="margin:0;color:#10b981;">8 ล้านตัน</h3>
-<p style="font-size:12px;color:#777;">ขยะพลาสติก/ปี</p>
-</div>
-
-<div style="background:white;padding:20px;border-radius:15px;text-align:center;">
-<h3 style="margin:0;color:#2563eb;">91%</h3>
-<p style="font-size:12px;color:#777;">ไม่ได้ถูกรีไซเคิล</p>
-</div>
-
-<div style="background:white;padding:20px;border-radius:15px;text-align:center;">
-<h3 style="margin:0;color:#ef4444;">500 ปี</h3>
-<p style="font-size:12px;color:#777;">เวลาย่อยสลาย</p>
-</div>
-
-</div>
-
-<!-- Accordion Section -->
-<h3 style="margin-bottom:15px;">ประเภทที่ระบบตรวจจับได้</h3>
-
-<div class="accordion-card">
-<div class="accordion-header" onclick="toggleAccordion(this)">
+<div class="dropdown">
+<div class="dropdown-header" onclick="toggleDrop(this)">
 PET (1)
-<span>▼</span>
+<span>+</span>
 </div>
-<div class="accordion-content">
-Polyethylene Terephthalate<br><br>
-✔ ใช้ทำขวดน้ำดื่ม ขวดเครื่องดื่ม<br>
-✔ รีไซเคิลง่ายมาก<br>
-⚠ ควรล้างก่อนทิ้ง
+<div class="dropdown-body">
+ใช้ทำขวดน้ำดื่ม ขวดเครื่องดื่ม<br><br>
+รีไซเคิลง่ายที่สุด ควรล้างก่อนทิ้ง
 </div>
 </div>
 
-<div class="accordion-card">
-<div class="accordion-header" onclick="toggleAccordion(this)">
+<div class="dropdown">
+<div class="dropdown-header" onclick="toggleDrop(this)">
 HDPE (2)
-<span>▼</span>
+<span>+</span>
 </div>
-<div class="accordion-content">
-High-Density Polyethylene<br><br>
-✔ ขวดแชมพู แกลลอน ถังน้ำ<br>
-✔ แข็งแรง ทนสารเคมี<br>
-✔ รีไซเคิลได้ดี
+<div class="dropdown-body">
+ขวดแชมพู แกลลอน ถังน้ำ<br><br>
+แข็งแรง ทนทาน รีไซเคิลได้ดี
 </div>
 </div>
 
-<div class="accordion-card">
-<div class="accordion-header" onclick="toggleAccordion(this)">
+<div class="dropdown">
+<div class="dropdown-header" onclick="toggleDrop(this)">
 Other (7)
-<span>▼</span>
+<span>+</span>
 </div>
-<div class="accordion-content">
+<div class="dropdown-body">
 พลาสติกผสม เช่น PC, ABS<br><br>
-❌ รีไซเคิลยาก<br>
-⚠ บางชนิดอาจมีสารอันตราย
+รีไซเคิลยาก บางชนิดอาจมีสารอันตราย
 </div>
-</div>
-
-<!-- Tips -->
-<div style="
-margin-top:35px;
-background:#f1f5f9;
-padding:20px;
-border-radius:15px;
-">
-
-<h3>เคล็ดลับการรีไซเคิล</h3>
-
-<ul style="padding-left:18px;font-size:14px;line-height:1.7;">
-<li>ล้างภาชนะก่อนทิ้ง</li>
-<li>บีบขวดเพื่อลดพื้นที่</li>
-<li>แยกประเภทตามรหัส</li>
-<li>อย่าเผาพลาสติก</li>
-</ul>
-
 </div>
 
 </div>
 </div>
-
 
 <script>
 
@@ -184,7 +243,6 @@ let isCameraOn=false;
 let currentFacingMode="environment";
 let loopId=null;
 
-/* โหลดโมเดล */
 async function loadModel(){
 model=await tmImage.load(URL+"model.json",URL+"metadata.json");
 createBars();
@@ -225,27 +283,19 @@ document.querySelectorAll(".tab")[i].classList.add("active");
 }
 
 async function toggleCamera(){
-if(isCameraOn){
-await stopCamera();
-}else{
-await startCamera();
-}
+if(isCameraOn){ await stopCamera(); }
+else{ await startCamera(); }
 }
 
 async function startCamera(){
-
 const flip=currentFacingMode==="user";
 webcam=new tmImage.Webcam(400,400,flip);
-
 await webcam.setup({facingMode:currentFacingMode});
 await webcam.play();
-
 document.getElementById("webcam-container").innerHTML="";
 document.getElementById("webcam-container").appendChild(webcam.canvas);
-
 document.getElementById("placeholder").style.display="none";
 document.getElementById("switchBtn").style.display="block";
-
 isCameraOn=true;
 loop();
 }
@@ -253,21 +303,17 @@ loop();
 async function stopCamera(){
 if(loopId) cancelAnimationFrame(loopId);
 if(webcam) await webcam.stop();
-
 document.getElementById("webcam-container").innerHTML="";
 document.getElementById("placeholder").style.display="block";
 document.getElementById("switchBtn").style.display="none";
-
 resetBars();
 isCameraOn=false;
 }
 
 async function switchCamera(){
 if(!isCameraOn) return;
-
 currentFacingMode =
 currentFacingMode==="environment" ? "user" : "environment";
-
 await webcam.stop();
 await startCamera();
 }
@@ -294,7 +340,29 @@ document.querySelectorAll(".progress-fill").forEach(e=>e.style.width="0%");
 document.querySelectorAll(".percent-text").forEach(e=>e.innerText="0%");
 }
 
+/* DROPDOWN */
+function toggleDrop(header){
+const allBodies=document.querySelectorAll(".dropdown-body");
+const allHeaders=document.querySelectorAll(".dropdown-header span");
+
+allBodies.forEach(b=>{
+b.style.maxHeight=null;
+b.style.padding="0 20px";
+});
+allHeaders.forEach(h=>h.innerText="+");
+
+const body=header.nextElementSibling;
+
+if(body.style.maxHeight){
+body.style.maxHeight=null;
+header.querySelector("span").innerText="+";
+}else{
+body.style.maxHeight=body.scrollHeight+"px";
+body.style.padding="15px 20px";
+header.querySelector("span").innerText="-";
+}
+}
+
 </script>
 </body>
 </html>
-
