--- a/index.html
+++ b/index.html
@@ -235,17 +235,23 @@ HDPE (2)
 <!-- OTHER -->
 <div class="dropdown">
 <div class="dropdown-header" onclick="toggleDrop(this)">
-Other (7)
+Other (วัตถุทั่วไป)
 <span>+</span>
 </div>
 <div class="dropdown-body">
-<b>ประเภท:</b> พลาสติกผสม เช่น PC, ABS<br>
-<b>ตัวอย่าง:</b> กล่องอาหารบางชนิด ฝาขวดบางประเภท<br><br>
-❌ รีไซเคิลยาก<br>
-⚠ บางชนิดอาจมีสาร BPA<br><br>
-<b>คำแนะนำ:</b> ตรวจสอบสัญลักษณ์ก่อนทิ้ง
+<b>ความหมาย:</b> วัตถุอื่น ๆ ที่ไม่ใช่ขวดพลาสติกตามที่ระบบฝึกไว้<br><br>
+
+<b>ตัวอย่าง:</b><br>
+- มือ<br>
+- โต๊ะ<br>
+- พื้น<br>
+- กล่องกระดาษ<br>
+- สิ่งของทั่วไปในกล้อง<br><br>
+
+ℹ️ หมวดนี้ใช้เพื่อรองรับกรณีที่ผู้ใช้ฉายกล้องไปยังวัตถุอื่นที่ไม่เกี่ยวข้องกับการจำแนกประเภทขวดพลาสติก
 </div>
 </div>
+
 
 <!-- SECTION เพิ่มเติม -->
 <div style="
@@ -417,4 +423,5 @@ header.querySelector("span").innerText="-";
 </script>
 </body>
 </html>
+
 
